--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,3 +40,5 @@ services:
       POSTGRES_DB: spark-workshop
     ports:
       - "5432:5432"
+    volumes:
+      - "./sql:/docker-entrypoint-initdb.d"
